--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,21 @@
 * TOD0: separate/component'ize rules.
 * TODO: don not overwrite React default package created.
 */
+.xyz {
+  pointer-events: none; 
+  position: absolute; 
+  z-index: 999; 
+  font-size: 12px; 
+  padding: 8px; 
+  background: #000; 
+  color: #fff; 
+  max-height: 240px; 
+}
+
+.navbar { /* above deck.gl*/
+  z-index: 9999;
+}
+
 .loader:empty {
   position: absolute;
   top: calc(50% - 4em);
@@ -39,6 +54,32 @@
 	margin: 0 0 5px;
 	color: #777;
 }
+
+/* mapbox legend */
+.mapbox-legend {
+  background-color: #fff;
+  border-radius: 3px;
+  bottom: 30px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.10);
+  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  padding: 10px;
+  position: absolute;
+  right: 10px;
+  z-index: 1;
+}
+
+.mapbox-legend h4 {
+  margin: 0 0 10px;
+}
+
+.mapbox-legend span {
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 5px;
+  width: 10px;
+  height: 10px;
+}
+
 .legend {
 	line-height: 18px;
 	color: #555;
