--- a/src/components/DeckSidebar/DeckSidebar.css
+++ b/src/components/DeckSidebar/DeckSidebar.css
@@ -25,7 +25,8 @@
   display: flex;
   -webkit-box-align: stretch;
   -webkit-transition: margin 250ms;
-  transition: margin 250ms;
+  transition: margin 250ms cubic-bezier(0, 0, 0.5, 0.1);
+
   position: absolute;
   padding-top: 20px;
   padding-bottom: 30px;
