--- a/src/components/DeckSidebar/DeckSidebar.css
+++ b/src/components/DeckSidebar/DeckSidebar.css
@@ -20,6 +20,8 @@
 
 .right-side-panel {
   background-color: #242730;
+  /* max-width: 350px; defined in the component */
+  /* max-height: 350px; again defined in the component */
 }
 
 .side-panel-container {
