Tooltip/hover heatmap crash data analysis, generate multiline graph and single lines based on heatmap aggregation

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -74,6 +74,11 @@ main, .content {
   min-width: 320px;
 }
 
+/* hard coded for theming*/
+.rv-discrete-color-legend-item__title {
+  color: lightgray;
+}
+
 @media only screen and (max-width: 600px) {
   .searchField, .visArea {
     max-width: 90%;
