--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,9 @@
   font-size: 12px; 
   padding: 2px; 
   background: #000; 
-  color: #fff; 
+  color: #fff;
+  max-height: 320px;
+  overflow-y: scroll;
 }
 
 .navbar { /* above deck.gl*/
