prep for drag select react-vis series and npm uupdate

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -79,8 +79,22 @@ main, .content {
   color: lightgray;
 }
 
+.unselectable {
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+
+  /*
+    Introduced in IE 10.
+    See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
+  */
+  -ms-user-select: none;
+  user-select: none;
+}
+
 @media only screen and (max-width: 600px) {
   .searchField, .visArea {
     max-width: 90%;
   }
 }
+
