--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import "https://unpkg.com/react-vis/dist/style.css";
+@import "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css";
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
 /**
 * ATFutures, LIDA/ITS, University of Leeds
 * Prepackaged css rules that may or may not be used.
