--- a/src/components/decksidebar/DeckSidebar.css
+++ b/src/components/decksidebar/DeckSidebar.css
@@ -109,6 +109,9 @@
   color: #a3a5a8;
 }
 
-/* #main-tabs {
-  background: white;
-} */
+.truncate {
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
