--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,6 @@
 
 /* mapbox legend */
 .mapbox-legend {
-  background-color: #fff;
   border-radius: 3px;
   bottom: 30px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.10);
@@ -77,6 +76,11 @@
   position: absolute;
   right: 10px;
   z-index: 1;
+}
+
+.mapbox-legend p {
+  margin-bottom: 2px;
+  text-align: center;
 }
 
 .mapbox-legend h4 {
@@ -91,8 +95,9 @@
   height: 10px;
 }
 
-.mapbox-legend i:first-child {
+.mapbox-legend i {
   margin-right: 5px;
+  margin-left: 5px;
 }
 
 .legend {
