introduce hideCharts, no map in no API token and minor others

--- a/src/components/decksidebar/DeckSidebar.css
+++ b/src/components/decksidebar/DeckSidebar.css
@@ -21,6 +21,8 @@
 
 .right-side-panel {
   background-color: #242730;
+  text-align: center;
+  max-width: 30%;
   /* max-width: 350px; defined in the component */
   /* max-height: 350px; again defined in the component */
 }
